--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.container-imagens {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+}
+.container-imagens img {
+  width: 45%;
+  max-width: 400px;
+  height: auto;
+}
